# CPP

lab/lab11/: e1  e1.cpp  e2  e2.cpp  e3  e3.cpp  matrix.h
lab/lab12/: e2.cpp  e3.cpp
lab/lab13/: prime_checker  prime_checker.rs
lab/lab13/prime_checker_app/: Cargo.toml
lab/lab13/test_proj/src/: lib.rs
lab/lab14/: cpp  struct_layout  struct_layout.rs  test  test.cpp  test.rs
practice/: test.cpp
week03/examples/lab/practice/: e3  e3.cpp  e4  e4.cpp  e5  e5.cpp
week03/examples/lab/practice/p2/: Makefile
week03/examples/lab/practice/p2/src/: lab3_practice.cpp
week04/examples/practice/: e2  e2.cpp  e3  e3.cpp  e4  e4.cpp
week04/examples/practice/p2/: CMakeLists.txt
week04/examples/practice/p2/inc/: functions.h
week04/examples/practice/p2/src/: fib.cpp  print_hello.cpp
week05/examples/: test.cpp
week05/practice/: e1  e1.cpp  e2  e2.cpp  e31  e32  e3_1.cpp  e3_2.cpp
week06/practice/: e1  e1.cpp  e3  e3.cpp  fdemo3_ptr-x64.s  fdemo3_ptr.c  fdemo3_ref-x64.s  fdemo3_ref.c  main  main.cpp  swap.cpp
week07/practice/: e2  e2.cpp  main.cpp  test_shared  test_static  vabs.cpp
week10/examples/lab/: a  complex.h  e2.cpp  e3  main.cpp  rational.h
